--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "runesse-next",
-  "version": "0.0.1",
+  "name": "runesse-monorepo",
   "private": true,
+  "packageManager": "pnpm@9.0.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@vercel/analytics": "^1.3.1",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.460.0",
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "dev:site": "pnpm --filter @runesse/site dev",
+    "dev:web": "pnpm --filter @runesse/web dev",
+    "dev:admin": "pnpm --filter @runesse/admin dev",
+    "build": "pnpm -r build",
+    "lint": "pnpm -r lint",
+    "format": "prettier -w ."
   },
   "devDependencies": {
-    "@types/node": "24.2.1",
-    "@types/react": "19.1.10",
-    "autoprefixer": "^10.4.20",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.9",
-    "typescript": "^5.5.4"
+    "prettier": "^3.3.3"
   }
 }
