build: generate Prisma client during Vercel install

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "pnpm --filter @runesse/db exec prisma generate"
   },
   "dependencies": {
     "@runesse/db": "workspace:*",
