fix(build): ensure Prisma Client is generated (db postinstall + web prebuild)

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,7 +8,8 @@
     "generate": "prisma generate",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
-    "seed": "ts-node src/seed.ts"
+    "seed": "ts-node src/seed.ts",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1"
