--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,27 +4,25 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "pnpm --filter @runesse/db exec prisma generate && prisma generate --schema=../../packages/db/prisma/schema.prisma && next build --webpack",
+    "build": "pnpm --filter @runesse/db exec prisma generate && next build --webpack",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "pnpm --filter @runesse/db exec prisma generate && prisma generate --schema=../../packages/db/prisma/schema.prisma"
+    "postinstall": "pnpm --filter @runesse/db exec prisma generate"
   },
   "dependencies": {
     "@runesse/db": "workspace:*",
-    "@prisma/client": "5.22.0",
+    "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "prisma": "5.22.0",
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
   }
 }
