--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   },
   "devDependencies": {
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.81.1",
+    "dotenv": "^17.2.3"
   }
 }
