--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "postinstall": "pnpm --filter @runesse/db exec prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "5.22.0",
     "@runesse/db": "workspace:*",
     "next": "16.0.0",
     "react": "19.2.0",
@@ -22,6 +23,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "postcss": "^8.4.49",
+    "prisma": "5.22.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
