--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,7 +13,8 @@
     "@runesse/db": "workspace:*",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "@prisma/client": "5.22.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
