--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,11 +10,11 @@
     "postinstall": "pnpm --filter @runesse/db exec prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "5.22.0",
     "@runesse/db": "workspace:*",
-    "next": "16.0.0",
+    "next": "16.1.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "@prisma/client": "5.22.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
