fix(admin): correct tsconfig paths and supabaseClient import

--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -23,10 +23,11 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+  "@/*": [
+    "./app/*"
+  ]
+}
+
   },
   "include": [
     "next-env.d.ts",
